--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Template repo for html/css/js projects",
   "license": "ISC",
   "author": "Abdirazakf",
-  "type": "commonjs",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "jest",
